<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            
             <TextView
                android:id="@+id/id_stock_sh_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:text="@string/stock_sh"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/id_stock_sh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_below="@+id/id_stock_sh_name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sh_stock_delprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_stock_sh"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                 />

            <TextView
                android:id="@+id/sh_stock_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_stock_sh"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                 />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#F2F2F2" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
             >
            
            <TextView
                android:id="@+id/id_stock_sz_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:text="@string/stock_sz"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            

            <TextView
                android:id="@+id/id_stock_sz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/id_stock_sz_name"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp" />
            
            <TextView
                android:id="@+id/sz_stock_delprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/id_stock_sz"
                android:layout_below="@+id/id_stock_sz"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/sz_stock_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_stock_sz"
             	android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
               />
        </RelativeLayout>
    </LinearLayout>

    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F2F2"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_name"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_currentprice_name"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_percent_name"
            android:textSize="16sp" />
    </LinearLayout>
    
       <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F2F2"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7" >

        <com.buy.stock.view.SlideListView
            android:id="@+id/id_stock_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#F2F2F2"
            android:dividerHeight="1dp" >
        </com.buy.stock.view.SlideListView>
    </FrameLayout>

</LinearLayout>